[build-system]
requires = ["setuptools", "wheel", "cibuildwheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "pycirclemedianfilter"
version = "0.1.0"
authors = [
  { name="Martin Storath", email="martin.storath@thws.de" },
]
description = "Fast median filter for circle-valued data, for example signals or images describing phase or orientation"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/mstorath/CircleMedianFilter"
Issues = "https://github.com/mstorath/CircleMedianFilter/issues"